@@ -1,3 +1,9 @@
+2012-10-16  Paul Fitzpatrick  <paul@robotrebuilt.com>
+
+	* src/libYARP_OS/src/Companion.cpp: add "yarp merge" command,
+	equivalent to portMerge utility in iCub repository.  Original
+	code by Marco [thanks Marco Randazzo]
+
 2012-10-11  Ugo Pattacini  <ugo.pattacini@iit.it>
 
    * src/libYARP_dev/include/yarp/dev/GazeControl.h,CartesianControl.h:
